fission/fission-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: <hostname>-fission-router-svc
  namespace: fission
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: dns01
    certmanager.k8s.io/acme-dns01-provider: aws
spec:
  rules:
    - host: <hostname>
    http:
      paths:
      - path: /
        backend:
          serviceName: router
          servicePort: 80
      - path: /fission-functions/
        backend:
          serviceName: ah-ah-ah
          servicePort: 80
  tls:
  - hosts:
    - <hostname>
    secretName: <hostname>-fission-router-svc
